# QuicProxy

./: .gitignore  Cargo.toml  Makefile  ReadMe.md  linux_install.sh  server_install.sh
.cargo/: config.toml
.github/workflows/: build.yml  cleanup-releases.yml  release.yml
assets/: windows_setup.iss
assets/example_config/: client.json5  server.json5
doc/: linux.md  server.md
src/: bootstrap.rs  lib.rs  main.rs
src/api/: common.rs  core_api.rs  core_manager.rs  mod.rs  persist_store.rs  reverse_proxy.rs  static_files.rs  sysinfo_api.rs
src/cache/: mod.rs  redb_store.rs
src/config/: mod.rs
src/dns/: mod.rs
src/proxy/: anytls_proto.rs  mod.rs  observe.rs  router.rs  shadowquic_udp.rs
src/proxy/inbound/: anytls.rs  http.rs  mod.rs  shadowquic.rs  socks5.rs  trojan.rs
src/proxy/outbound/: anytls.rs  direct.rs  dns.rs  mod.rs  selector.rs  shadowquic.rs  trojan.rs
src/proxy/outbound/shadowsocks/: datagram.rs  mod.rs
src/proxy/outbound/vmess/: mod.rs
src/proxy/outbound/vmess/vmess_impl/: cipher.rs  client.rs  datagram.rs  header.rs  kdf.rs  stream.rs  user.rs
src/proxy/router/: geoip.rs  geoip_db.rs  rule.rs
src/utils/: http_outbound.rs  keyed_notify.rs  logging.rs  mod.rs  os.rs  redb_store.rs  system_proxy.rs
src/utils/interface/: mod.rs  platform_windows.rs
src/utils/net_monitor/: linux.rs  macos.rs  mod.rs  windows.rs
src/utils/quic_wrap/: quinn_wrap.rs
src/utils/socket/platform/: mod.rs
tests/: anytls_go_compat_test.rs  anytls_test.rs  integration_test.rs  shadowquic_test.rs  test_config.json  test_dns.rs  test_http3.json5  trojan_test.rs
tests/common/: mod.rs
